test/function/missing_comma.cipl.out
::stdout::

::stderr::
Error on line 1 at `c`: Expect ')' after parameters
