test/function/missing_comma.cipl
proc f(a, b c, d, e):
    pass